# summit

./: .gitignore  Cargo.toml  Dockerfile  QUICKSTART.md  README.md  REFACTOR_TASKS.md  entrypoint.sh  run-summit-dev.sh  test.txt
.github/workflows/: ci-cd.yml  release.yml
astral/: index.html  main.js  package-lock.json  package.json  summit-app.jsx  vite.config.electron.js  vite.config.js
astral/src/: App.jsx
crates/libsummit/: Cargo.toml
crates/summit-api/: Cargo.toml
crates/summit-api/src/: handlers.rs  lib.rs
crates/summit-api/src/handlers/: compute.rs  files.rs  messages.rs  mod.rs  sessions.rs  status.rs  trust.rs
crates/summit-core/: Cargo.toml
crates/summit-core/src/: config.rs  crypto.rs  lib.rs  message.rs  recovery.rs  wire.rs
crates/summit-ctl/: Cargo.toml
crates/summit-ctl/src/: main.rs
crates/summit-ctl/src/cmd/: compute.rs  files.rs  http.rs  messages.rs  mod.rs  sessions.rs  status.rs  trust.rs
crates/summit-services/: Cargo.toml
crates/summit-services/src/: cache.rs  chunk_types.rs  compute_executor.rs  compute_service.rs  compute_store.rs  compute_types.rs  file_transfer.rs  lib.rs  message_store.rs  messaging_service.rs  peer.rs  qos.rs  schema.rs  send_target.rs  service.rs  session.rs  trust.rs
crates/summitd/: Cargo.toml
crates/summitd/src/: cache.rs  delivery.rs  dispatch.rs  main.rs  message_store.rs  qos.rs  schema.rs  send_target.rs  status.rs  transfer.rs  trust.rs
crates/summitd/src/capability/: broadcast.rs  listener.rs  mod.rs
crates/summitd/src/chunk/: manager.rs  mod.rs  receive.rs  recovery.rs  send.rs  send_worker.rs
crates/summitd/src/session/: handshake.rs  initiator.rs  listener.rs  mod.rs  state.rs
docs/: DEPENDENCIES.md  QUICKSTART.md  uninstall.sh
docs/install/: install-arch.sh  install-ubuntu.sh  install.sh
scripts/: build-astral.sh  build.sh  cleanup-run-3.sh  detect-wifi.sh  file-transfer-test.sh  netns-down.sh  netns-run-3.sh  netns-run.sh  netns-setup-3.sh  netns-setup.sh  netns-up.sh  peer-vs-broadcast-send.sh  run-wifi.sh  schema-session-test.sh  trust-test.sh
tests/integration/: Cargo.toml  compute.rs  failures.rs  fault.rs  files.rs  infra.rs  main.rs  messaging.rs  recovery.rs  service_config.rs  sessions.rs  status.rs  trust.rs
zenith/: .gitignore  index.html  main.cjs  package-lock.json  package.json  preload.cjs  preload.js  vite.config.js
zenith/src/: App.jsx  index.css
zenith/src/api/: client.js
zenith/src/components/common/: Badge.jsx  CopyButton.jsx  ErrorBoundary.jsx  PulseDot.jsx  SectionHeader.jsx
zenith/src/components/compute/: ComputeView.jsx  PeerSelector.jsx  TaskCard.jsx  TaskDetail.jsx  TaskList.jsx  TaskSubmitForm.jsx
zenith/src/components/dashboard/: ComputeSummary.jsx  DashboardView.jsx  MessagesSummary.jsx  NetworkWidget.jsx  TransferSummary.jsx
zenith/src/components/files/: DropZone.jsx  FileList.jsx  FilesView.jsx  TransferCard.jsx
zenith/src/components/inspector/: NodeInspector.jsx  TrustControls.jsx
zenith/src/components/layout/: AppShell.jsx  ContextPanel.jsx  HeaderBar.jsx  Sidebar.jsx  StatusBar.jsx
zenith/src/components/messages/: ChatWindow.jsx  ConversationList.jsx  MessageBubble.jsx  MessageInput.jsx  MessagesView.jsx
zenith/src/components/network/: MeshCanvas.jsx  NetworkMap.jsx  ParticleLayer.jsx
zenith/src/components/system/: CachePanel.jsx  ServicesList.jsx  SessionList.jsx  SettingsPanel.jsx  SystemView.jsx
zenith/src/context/: DaemonContext.jsx  UIContext.jsx
zenith/src/hooks/: useCanvasSize.js  useConfig.js  useDaemon.js  useForceSimulation.js  useMeshGraph.js  usePolling.js  useUIState.js
zenith/src/lib/: colors.js  format.js
