# /summit/Cargo.toml
[workspace]
members = [
    "crates/summitd",
    "crates/summit-core",
    "crates/summit-services",
    "crates/summit-api",
    "crates/libsummit",
    "crates/summit-ctl",
    "tests/integration",
]
resolver = "2"

[workspace.dependencies]
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes      = "1"
anyhow     = "1"
tracing    = "0.1"
hex        = "0.4"
blake3     = "1.5"
dashmap    = "5"
thiserror  = "1"
zerocopy   = { version = "0.7", features = ["derive"] }
memmap2    = "0.9"
libc       = "0.2"
