[package]
name = "summit-api"
version = "0.1.0"
edition = "2021"

[dependencies]
summit-core = { path = "../summit-core" }
summit-services = { path = "../summit-services" }
axum = { version = "0.8.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.8", features = ["cors"] }
bytes = "1"
hex = "0.4"
tracing = "0.1"
anyhow = "1"
