[package]
name = "summit-api"
version = "0.1.0"
edition = "2021"

[dependencies]
summit-core     = { path = "../summit-core" }
summit-services = { path = "../summit-services" }
axum            = { version = "0.8.8", features = ["multipart"] }
tokio           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
blake3          = { workspace = true }
bytes           = { workspace = true }
hex             = { workspace = true }
tracing         = { workspace = true }
anyhow          = { workspace = true }
