[package]
name = "summit-core"
version = "0.1.0"
edition = "2021"

[dependencies]
zerocopy          = { version = "0.7", features = ["derive"] }
static_assertions = "1"
blake3            = "1"
snow              = "0.9"
rand              = "0.8"
zeroize           = { version = "1", features = ["derive"] }
thiserror         = "1"
x25519-dalek      = { version = "2", features = ["static_secrets"] }
