[package]
name = "summit-core"
version = "0.1.0"
edition = "2021"

[dependencies]
zerocopy          = { workspace = true }
static_assertions = "1"
snow              = "0.9"
rand              = "0.8"
zeroize           = { version = "1", features = ["derive"] }
thiserror         = { workspace = true }
x25519-dalek      = { version = "2", features = ["static_secrets"] }
serde             = { workspace = true }
serde_json        = { workspace = true }
blake3            = { workspace = true }
toml              = "0.8"
