[package]
name = "summit-services"
version = "0.1.0"
edition = "2021"

[dependencies]
summit-core = { path = "../summit-core" }
dashmap = "5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
bytes = "1"
hex = "0.4"
anyhow = "1"
memmap2 = "0.9"
