[package]
name = "summit-services"
version = "0.1.0"
edition = "2021"

[dependencies]
summit-core = { path = "../summit-core" }
dashmap     = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
bytes       = { workspace = true }
hex         = { workspace = true }
anyhow      = { workspace = true }
memmap2     = { workspace = true }
libc        = { workspace = true }
