[package]
name = "summitd"
version = "0.1.0"
edition = "2021"

[dependencies]
summit-core = { path = "../summit-core" }
tokio       = { version = "1", features = ["full"] }
tokio-uring = "0.4"
bytes       = "1"
socket2     = "0.5"
dashmap     = "5"
anyhow      = "1"
thiserror   = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zerocopy    = { version = "0.7", features = ["derive"] }
libc        = "0.2"
hex         = "0.4"
memmap2     = "0.9"
futures = "0.3"
nix = { version = "0.31.1", features = ["net"] }
axum = { version = "0.8.8", features = ["multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rust-embed = { version = "8.5", optional = true }
mime_guess = { version = "2.0", optional = true }
tower-http = { version = "0.6.8", features = ["cors"] }
rusqlite = { version = "0.32", features = ["bundled"] }
blake3 = "1.5"

