[package]
name = "summitd"
version = "0.1.0"
edition = "2021"

[dependencies]
summit-core = { path = "../summit-core" }
summit-services = { path = "../summit-services" }
summit-api = { path = "../summit-api" }
tokio       = { version = "1", features = ["full"] }
bytes       = "1"
socket2     = "0.5"
dashmap     = "5"
anyhow      = "1"
thiserror   = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zerocopy    = { version = "0.7", features = ["derive"] }
libc        = "0.2"
hex         = "0.4"
memmap2     = "0.9"
futures = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
blake3 = "1.5"
